--- a/ranking/taikorank/TODO.txt
+++ b/ranking/taikorank/TODO.txt
@@ -1,11 +1,7 @@
 Modifications:
-- changer la projection des petits BPM, -> exp ou ²...
 - vérifier proportions dans reading.c
 - superosed/hidding/hidden à revoir
-- speed pb: when using FL time is shorter
--- small time: time
--- long time:  bpm?
-|> 2 values: reaction_time, slowness
+- last_hand don/kat
 
 notes:		   
 - HDHR not supported
@@ -14,22 +10,4 @@ notes:
 Projet:
 - accuracy !
 - redo all reading computation...
-- pattern, singletap proba
 
-/*
-old function ... to delete
-static double tro_speed (struct tr_object * obj)
-{
-  
-  if (time > TIME_CENTER) 
-    {
-      time = EXP_2_PT(time,
-		      TIME_CENTER, TIME_CENTER,
-		      TIME_MAX,    TIME_MIN);
-    }
-    
-  return FAST_MIN * (1 + pow(bpm_app - BPM_CENTER,
-			     (log(FAST_MAX / FAST_MIN - 1) /
-			     log(BPM_MAX - BPM_CENTER))));
-
-*/
