--- a/po/fr.po
+++ b/po/fr.po
@@ -1,174 +1,174 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Thomas Mijieux, Lucas Maugère
+# French translations for osux package.
+# Copyright (C) 2016 Thomas Mijieux, Lucas Maugère
 # This file is distributed under the same license as the osux package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#  <tmijieux@ipb.fr>, 2016.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: osux 0.1\n"
 "Report-Msgid-Bugs-To: lmaugere@ipb.fr, tmijieux@ipb.fr\n"
 "POT-Creation-Date: 2016-08-18 04:58+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2016-08-17 19:23+0200\n"
+"Last-Translator:  <tmijieux@ipb.fr>\n"
+"Language-Team: French\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: src/editor/app.c:102
 msgid "Open File"
-msgstr ""
+msgstr "Ouvrir un fichier"
 
 #: src/editor/app.c:102 src/editor/app.c:137
 msgid "_Cancel"
-msgstr ""
+msgstr "_Annuler"
 
 #: src/editor/app.c:103
 msgid "_Open"
-msgstr ""
+msgstr "_Ouvrir"
 
 #: src/editor/app.c:137
 msgid "Save beatmap"
-msgstr ""
+msgstr "Sauvegarder la beatmap"
 
 #: src/editor/app.c:138
 msgid "_Save"
-msgstr ""
+msgstr "_Sauvegarder"
 
 #: src/editor/beatmap.c:84 src/editor/ui/OsuxEditorWindow.ui:406
 msgid "Circle"
-msgstr ""
+msgstr "Cercle"
 
 #: src/editor/beatmap.c:85 src/editor/ui/OsuxEditorWindow.ui:425
 msgid "Slider"
-msgstr ""
+msgstr "Slider"
 
 #: src/editor/beatmap.c:86 src/editor/ui/OsuxEditorWindow.ui:414
 msgid "Spinner"
-msgstr ""
+msgstr "Spinner"
 
 #: src/editor/beatmap.c:87 src/editor/ui/OsuxEditorWindow.ui:436
 msgid "Hold"
-msgstr ""
+msgstr "Note Tenue"
 
 #: src/editor/beatmap.c:88
 msgid "Invalid type"
-msgstr ""
+msgstr "Type invalide"
 
 #: src/editor/ui/OsuxEditorWindow.ui:14
 msgid "osux Editor"
-msgstr ""
+msgstr "Éditeur osux"
 
 #: src/editor/ui/OsuxEditorWindow.ui:54
 msgid "_File"
-msgstr ""
+msgstr "_Fichier"
 
 #: src/editor/ui/OsuxEditorWindow.ui:135
 msgid "E_dit"
-msgstr ""
+msgstr "É_dition"
 
 #: src/editor/ui/OsuxEditorWindow.ui:185
 msgid "_View"
-msgstr ""
+msgstr "_Affichage"
 
 #: src/editor/ui/OsuxEditorWindow.ui:193
 msgid "_Help"
-msgstr ""
+msgstr "A_ide"
 
 #: src/editor/ui/OsuxEditorWindow.ui:401
 msgid "HitObjects"
-msgstr ""
+msgstr "HitObjects"
 
 #: src/editor/ui/OsuxEditorWindow.ui:452
 msgid "Transformation"
-msgstr ""
+msgstr "Transformation"
 
 #: src/editor/ui/OsuxEditorWindow.ui:458
 msgid "Symmetry"
-msgstr ""
+msgstr "Symétrie"
 
 #: src/editor/ui/OsuxEditorWindow.ui:466
 msgid "Scale"
-msgstr ""
+msgstr "Échelle"
 
 #: src/editor/ui/OsuxEditorWindow.ui:477
 msgid "Rotation"
-msgstr ""
+msgstr "Rotation"
 
 #: src/editor/ui/OsuxEditorWindow.ui:493
 msgid "Sample"
-msgstr ""
+msgstr "Son"
 
 #: src/editor/ui/OsuxEditorWindow.ui:499 src/editor/ui/OsuxEditorWindow.ui:559
 #: src/editor/ui/OsuxEditorWindow.ui:848
 msgid "Normal"
-msgstr ""
+msgstr "Normal"
 
 #: src/editor/ui/OsuxEditorWindow.ui:507
 msgid "Whistle"
-msgstr ""
+msgstr "Sifflet"
 
 #: src/editor/ui/OsuxEditorWindow.ui:518
 msgid "Finish"
-msgstr ""
+msgstr "Cymbale"
 
 #: src/editor/ui/OsuxEditorWindow.ui:529
 msgid "Clap"
-msgstr ""
+msgstr "Applaudit"
 
 #: src/editor/ui/OsuxEditorWindow.ui:545
 msgid "SampleType"
-msgstr ""
+msgstr "Type de son"
 
 #: src/editor/ui/OsuxEditorWindow.ui:551
 msgid "Default"
-msgstr ""
+msgstr "par défaut"
 
 #: src/editor/ui/OsuxEditorWindow.ui:570 src/editor/ui/OsuxEditorWindow.ui:849
 msgid "Soft"
-msgstr ""
+msgstr "Doux"
 
 #: src/editor/ui/OsuxEditorWindow.ui:581 src/editor/ui/OsuxEditorWindow.ui:850
 msgid "Drum"
-msgstr ""
+msgstr "Batterie"
 
 #: src/editor/ui/OsuxEditorWindow.ui:751
 msgid "Audio File"
-msgstr ""
+msgstr "Fichier audio"
 
 #: src/editor/ui/OsuxEditorWindow.ui:766
 msgid "Open Audio File"
-msgstr ""
+msgstr "Ouvrir un fichier audio"
 
 #: src/editor/ui/OsuxEditorWindow.ui:790
 msgid "Game Mode"
-msgstr ""
+msgstr "Mode de jeu"
 
 #: src/editor/ui/OsuxEditorWindow.ui:805
 msgid "Standard"
-msgstr ""
+msgstr "Standard"
 
 #: src/editor/ui/OsuxEditorWindow.ui:806
 msgid "Taiko"
-msgstr ""
+msgstr "Taiko"
 
 #: src/editor/ui/OsuxEditorWindow.ui:807
 msgid "Catch The beat"
-msgstr ""
+msgstr "Attrape le rythme"
 
 #: src/editor/ui/OsuxEditorWindow.ui:808
 msgid "Mania"
-msgstr ""
+msgstr "Mania"
 
 #: src/editor/ui/OsuxEditorWindow.ui:833
 msgid "SampleSet"
-msgstr ""
+msgstr "Type de son"
 
 #: src/editor/ui/OsuxEditorWindow.ui:875
 msgid "Stack Leniency"
-msgstr ""
+msgstr "Tolérance d'empilement"
 
 #: src/editor/ui/OsuxEditorWindow.ui:889 src/editor/ui/OsuxEditorWindow.ui:928
 #: src/editor/ui/OsuxEditorWindow.ui:966 src/editor/ui/OsuxEditorWindow.ui:1444
@@ -179,136 +179,136 @@ msgstr ""
 #: src/editor/ui/OsuxEditorWindow.ui:1683
 #: src/editor/ui/OsuxEditorWindow.ui:1970
 msgid "0"
-msgstr ""
+msgstr "0"
 
 #: src/editor/ui/OsuxEditorWindow.ui:914
 msgid "Preview Time"
-msgstr ""
+msgstr "Date de prévisualisation"
 
 #: src/editor/ui/OsuxEditorWindow.ui:952
 msgid "Audio LeadIn"
-msgstr ""
+msgstr "Temps de démarrage"
 
 #: src/editor/ui/OsuxEditorWindow.ui:990
 msgid "CountDown"
-msgstr ""
+msgstr "Compte à rebours"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1026
 msgid "Letter Box in breaks"
-msgstr ""
+msgstr "Lettres pendant les pauses"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1062
 msgid "WideScreen"
-msgstr ""
+msgstr "Écran large"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1105
 msgid "General"
-msgstr ""
+msgstr "Général"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1142
 msgid "Title"
-msgstr ""
+msgstr "Titre"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1178
 msgid "Romanized Title"
-msgstr ""
+msgstr "Titre romanisé"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1214
 msgid "Artist"
-msgstr ""
+msgstr "Artiste"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1250
 msgid "Romanized Artist"
-msgstr ""
+msgstr "Artiste romanisé(e)"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1286
 msgid "Creator"
-msgstr ""
+msgstr "Créateur"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1322
 msgid "Difficulty Name"
-msgstr ""
+msgstr "Nom de la difficulté"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1358
 msgid "Source"
-msgstr ""
+msgstr "Source"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1394
 msgid "Tags"
-msgstr ""
+msgstr "Mots clés"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1430
 msgid "Beatmap ID"
-msgstr ""
+msgstr "Numéro de la beatmap"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1468
 msgid "Beatmap Set ID"
-msgstr ""
+msgstr "Groupe de la beatmap"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1514
 msgid "Metadata"
-msgstr ""
+msgstr "Métadonnées"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1552
 msgid "DistanceSpacing"
-msgstr ""
+msgstr "Distance d'espacement"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1591
 msgid "BeatDivisor"
-msgstr ""
+msgstr "Mesure du temps"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1630
 msgid "Grid Size"
-msgstr ""
+msgstr "Taille de la grille"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1669
 msgid "Timeline Zoom"
-msgstr ""
+msgstr "Zoom sur la frise"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1701
 msgid "Add Bookmark at current time"
-msgstr ""
+msgstr "Ajouter un marque-page à l'instant courant"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1730
 msgid "Editor"
-msgstr ""
+msgstr "Éditeur"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1768
 msgid "HP Drain Rate"
-msgstr ""
+msgstr "Drain de Point de vie"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1805
 msgid "Circle Size"
-msgstr ""
+msgstr "Taille des cercles"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1842
 msgid "Overall Difficulty"
-msgstr ""
+msgstr "Difficulté générale"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1879
 msgid "Approach Rate"
-msgstr ""
+msgstr "Vitesse d'approche"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1916
 msgid "Slider Multiplier"
-msgstr ""
+msgstr "Vitesse des sliders"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1930
 msgid "1"
-msgstr ""
+msgstr "1"
 
 #: src/editor/ui/OsuxEditorWindow.ui:1956
 msgid "Slider Tick Rate"
-msgstr ""
+msgstr "Taux de tick par sliders"
 
 #: src/editor/ui/OsuxEditorWindow.ui:2001
 msgid "Difficulty"
-msgstr ""
+msgstr "Difficulté"
 
 #: src/editor/ui/OsuxEditorPopover.ui:21
 msgid "start typing..."
-msgstr ""
+msgstr "commencer à taper..."
 
 #: src/editor/ui/OsuxEditorPopover.ui:33
 msgid "Hi !"
-msgstr ""
+msgstr "Salut !"
