--- a/src/editor/TODO
+++ b/src/editor/TODO
@@ -47,3 +47,6 @@ TODO list:
         and restore it on startup
 
     - Find/Make an icon for the program
+
+
+    - way to handle unexpected properties
